// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ExerciseToolbar conditionally renders icons 2`] = `
<div
  className="sc-bczRLJ fXGBwS"
>
  <a
    href="openstax"
    target="_blank"
  >
    <svg
      aria-hidden="true"
      className="svg-inline--fa fa-circle-exclamation "
      data-icon="circle-exclamation"
      data-prefix="fas"
      focusable="false"
      role="img"
      style={Object {}}
      viewBox="0 0 512 512"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M256 512c141.4 0 256-114.6 256-256S397.4 0 256 0S0 114.6 0 256S114.6 512 256 512zm0-384c13.3 0 24 10.7 24 24V264c0 13.3-10.7 24-24 24s-24-10.7-24-24V152c0-13.3 10.7-24 24-24zm32 224c0 17.7-14.3 32-32 32s-32-14.3-32-32s14.3-32 32-32s32 14.3 32 32z"
        fill="currentColor"
        style={Object {}}
      />
    </svg>
    <span>
      Suggest a correction
    </span>
  </a>
</div>
`;

exports[`ExerciseToolbar conditionally renders icons 3`] = `
<div
  className="sc-bczRLJ fXGBwS"
>
  <a
    href="openstax"
    target="_blank"
  >
    <svg
      aria-hidden="true"
      className="svg-inline--fa fa-book-open "
      data-icon="book-open"
      data-prefix="fas"
      focusable="false"
      role="img"
      style={Object {}}
      viewBox="0 0 576 512"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M249.6 471.5c10.8 3.8 22.4-4.1 22.4-15.5V78.6c0-4.2-1.6-8.4-5-11C247.4 52 202.4 32 144 32C87.5 32 35.1 48.6 9 59.9c-5.6 2.4-9 8-9 14V454.1c0 11.9 12.8 20.2 24.1 16.5C55.6 460.1 105.5 448 144 448c33.9 0 79 14 105.6 23.5zm76.8 0C353 462 398.1 448 432 448c38.5 0 88.4 12.1 119.9 22.6c11.3 3.8 24.1-4.6 24.1-16.5V73.9c0-6.1-3.4-11.6-9-14C540.9 48.6 488.5 32 432 32c-58.4 0-103.4 20-123 35.6c-3.3 2.6-5 6.8-5 11V456c0 11.4 11.7 19.3 22.4 15.5z"
        fill="currentColor"
        style={Object {}}
      />
    </svg>
    <span>
      View topic in textbook
    </span>
  </a>
</div>
`;

exports[`ExerciseToolbar matches snapshot 1`] = `
<div
  className="sc-bczRLJ fXGBwS"
>
  <a
    href="openstax.org"
    target="_blank"
  >
    <svg
      aria-hidden="true"
      className="svg-inline--fa fa-book-open "
      data-icon="book-open"
      data-prefix="fas"
      focusable="false"
      role="img"
      style={Object {}}
      viewBox="0 0 576 512"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M249.6 471.5c10.8 3.8 22.4-4.1 22.4-15.5V78.6c0-4.2-1.6-8.4-5-11C247.4 52 202.4 32 144 32C87.5 32 35.1 48.6 9 59.9c-5.6 2.4-9 8-9 14V454.1c0 11.9 12.8 20.2 24.1 16.5C55.6 460.1 105.5 448 144 448c33.9 0 79 14 105.6 23.5zm76.8 0C353 462 398.1 448 432 448c38.5 0 88.4 12.1 119.9 22.6c11.3 3.8 24.1-4.6 24.1-16.5V73.9c0-6.1-3.4-11.6-9-14C540.9 48.6 488.5 32 432 32c-58.4 0-103.4 20-123 35.6c-3.3 2.6-5 6.8-5 11V456c0 11.4 11.7 19.3 22.4 15.5z"
        fill="currentColor"
        style={Object {}}
      />
    </svg>
    <span>
      View topic in textbook
    </span>
  </a>
  <a
    href="openstax.org"
    target="_blank"
  >
    <svg
      aria-hidden="true"
      className="svg-inline--fa fa-circle-exclamation "
      data-icon="circle-exclamation"
      data-prefix="fas"
      focusable="false"
      role="img"
      style={Object {}}
      viewBox="0 0 512 512"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M256 512c141.4 0 256-114.6 256-256S397.4 0 256 0S0 114.6 0 256S114.6 512 256 512zm0-384c13.3 0 24 10.7 24 24V264c0 13.3-10.7 24-24 24s-24-10.7-24-24V152c0-13.3 10.7-24 24-24zm32 224c0 17.7-14.3 32-32 32s-32-14.3-32-32s14.3-32 32-32s32 14.3 32 32z"
        fill="currentColor"
        style={Object {}}
      />
    </svg>
    <span>
      Suggest a correction
    </span>
  </a>
</div>
`;
